--- a/template/index.html
+++ b/template/index.html
@@ -77,7 +77,7 @@
   </section>
   <section>
     <div class="pg-button d-flex">
-      <a class="btn btn-primary d-flex" href="#" role="button">Meus projetos</a>
+      <a class="btn btn-primary d-flex" href="/projetos" role="button">Meus projetos</a>
     </div>
   </section>
 
