--- a/static/css/projetos.css
+++ b/static/css/projetos.css
@@ -23,7 +23,7 @@ section {
 .scrum-img {
     width: 200px;
     align-items: center;
-    margin-left: auto;
+    margin-left: 20px;
 }
 
 .links {
