--- a/template/sobre.html
+++ b/template/sobre.html
@@ -17,7 +17,7 @@
 
             <!-- Elemento 1 -->
             <div class="content-block col-sm-4">
-                <img class="ft-img" src="{{url_for('static', filename='img/luana.jpeg')}}" alt="img">
+                <img class="img-fluid ft-img" src="{{url_for('static', filename='img/luana.jpeg')}}" alt="img">
             </div>
 
             <!-- Elemento 2 -->
@@ -90,5 +90,20 @@
             </div>
               </div>
           </div>
+</section>
+<br>
+<section>
+  <div class="container-content row">
+    <!-- Elemento 1 -->
+    <div class="content-block col-sm-4">
+        <img class="img-fluid scrum-img" src="{{url_for('static', filename='img/About me-amico.svg')}}" alt="img">
+    </div>
+    <!-- Elemento 2 -->
+    <div class="content-block col-sm-8">
+        <div class="content d-flex justify-content-center flex-wrap">
+         <strong> • Explorando o Mundo Digital: Uma Paixão pela Programação </strong> <br>
+          Nascida e criada em São José dos Campos - SP, tenho 18 anos e estudo programação desde os 15. A programação para mim não é apenas uma habilidade técnica, mas uma forma de expressão criativa. Cada projeto é uma tela em branco, esperando para ser preenchida com soluções inovadoras e funcionais. Seja desenvolvendo aplicativos intuitivos, criando sites dinâmicos ou explorando os limites da inteligência artificial, mergulho de cabeça em cada projeto.
+        </div>
+
 </section>
 {% endblock %}
