--- a/static/css/contatos.css
+++ b/static/css/contatos.css
@@ -32,3 +32,46 @@ section form {
     margin-left: 15%;
     padding: 10px;
 }
+
+.cards {
+    gap: 50px;
+    justify-content: center;
+}
+
+.card {
+    background-color: #48e0c7;
+    border-radius: 25px;
+    border: none;
+    max-width: 130px;
+    max-height: 300px;
+    box-shadow: 1px 2px rgba(0, 0, 0, 0.30);
+}
+
+.card:hover {
+    transform: scale(1.1);
+    background-position: -60px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.card-title {
+    margin: 0;
+    font-weight: 600;
+    font-size: 15px;
+    text-align: center;
+    margin-bottom: 10px;
+    color: white;
+}
+
+
+.btn {
+    background-color: #c170e7;
+    border: none;
+    border-radius: 20px;
+    width: 100px;
+    height: 40px;
+    font-weight: 200;
+    font-size: 13px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
+}
