--- a/template/contatos.html
+++ b/template/contatos.html
@@ -8,18 +8,54 @@
 
 {% block pageContent %}
 
-<section>
+<section> 
     <h1 class="title"> Entre em contato! </h1>
 <section>
+    <div class="container-content row">
+        <!-- Elemento 1 -->
+        <div class="content-block col-sm-4">
+            <img class="img-fluid scrum-img" src="{{url_for('static', filename='img/Mobile-amico.svg')}}" alt="img">
+        </div>
+        <!-- Elemento 2 -->
+        <div class="content-block col-sm-8">
+            <div class="content d-flex justify-content-center flex-wrap">
+            </div>
     <form action="submit">
     <label for="email"> Seu e-mail: </label> <br>
     <input type="text" name="email" id="email"> <br>
     <label for="assunto"> Assunto: </label> <br>
     <input type="text" name="assunto" id="assunto"><br> 
     <label for="desc"> Descrição: </label> <br>
-    <textarea name="desc" id="desc" cols="30" rows="10"></textarea>    
-    <button type="button" value="Enviar">Enviar</button>   
+    <textarea name="desc" id="desc" cols="25" rows="5"></textarea>    
+    <div class="pg-button d-flex">
+        <a class="btn btn-primary d-flex" button type="button" value="Enviar">Enviar</button>   </a>
     </form>
+        </div>
+   </section>
+    <section>
+        <div class="cards d-flex">
+          <div class="card col-3">
+            <div class="card-body">
+                <a class="links" href="https://www.instagram.com/luanaapms/"> 
+                     <i class="bi bi-instagram" style="color: white;"></i></a> 
+              <h5 class="card-title">Instagram</h5>
+            </div>
+          </div>
+          <div class="card col-3">
+            <div class="card-body">
+                <a class="links" href="https://www.linkedin.com/in/luana-souza-b104801b2/"> 
+                    <i class="bi bi-linkedin"style="color: white"></i></a>
+                    <h5 class="card-title">Linkedin</h5>
+            </div>
+          </div>
+          <div class="card col-3">
+            <div class="card-body">
+                <a class="links" href="https://twitter.com/luanaapms"> 
+                    <i class="bi bi-file-excel-fill" style="color: white"></i></a>
+                    <h5 class="card-title">X</h5>
+            </div>
+          </div>
+        </div>
    </section>
 
    {% endblock %}
