--- a/static/css/style_index.css
+++ b/static/css/style_index.css
@@ -78,27 +78,30 @@ section {
 
 
 @media(max-width: 600px) {
+    .cards{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top:  50px;
+        gap: 20px;
+        
+       }
    .card{
-    flex: 1 1 150px;
-    margin: 5px;
+    margin: 0 auto;
+    width: 200px;
    }
-   .resp{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
-   }
+   
    .card:hover {
     opacity: 60%;
         padding: 12px 20px;
 }
 
 .card-title {
-    font-size: .70rem;
+    font-size: 10px;
 }
 
 .card-text {
-    font-size: .50rem;
+    font-size: 9px;
 }
 
 }
